--- a/changelog/release-history/feature-highlights.mdx
+++ b/changelog/release-history/feature-highlights.mdx
@@ -1,171 +1,105 @@
 ---
-title: "Major Features & Improvements"
-description: "Focused summaries of standout features and enhancements introduced in each release cycle. Users can quickly scan for must-use additions and quality-of-life upgrades that unlock new testing capabilities or streamline common tasks."
+title: "Feature Highlights by Release"
+description: "Presents the most important new features, improvements, and optimizations introduced in each version. Users can explore release-specific advancements, maximizing the benefits of upgrading."
 ---
 
-# Major Features & Improvements
+# Feature Highlights by Release
 
-This page highlights the standout features and enhancements introduced in each GoogleTest and GoogleMock release cycle. Designed for users who want to quickly identify impactful additions and quality-of-life upgrades, this documentation focuses on how these changes unlock new testing capabilities or streamline everyday testing tasks.
-
----
-
-## How to Use This Page
-
-Browse this summary to spot must-use features and improvements at a glance. Each entry correlates to a specific release, outlining key updates that empower you to write more robust, maintainable tests while improving your overall testing workflow.
-
-For developers actively maintaining test suites or integrating GoogleTest in CI pipelines, these highlights help prioritize which new features to adopt and understand the rationale behind enhancements.
+This page presents the most important new features, improvements, and optimizations introduced in each GoogleTest and GoogleMock release. Users can explore release-specific advancements to maximize the benefits of upgrading their testing framework.
 
 ---
 
-## Recent Major Features and Improvements
+## Latest Major Releases
 
-### Support for Move-Only Types in Mock Methods
-GoogleMock now fully supports mocking methods with move-only types such as `std::unique_ptr`. This enhancement simplifies the testing of modern C++ code by allowing direct mocking of methods that take or return move-only arguments, avoiding cumbersome workarounds. Users can now define mocks using the familiar `MOCK_METHOD` macro even with move-only parameters or return types.
+### Version 1.17.0
+**Release Date:** Recent
 
-```cpp
-class MockBuzzer : public Buzzer {
- public:
-  MOCK_METHOD(std::unique_ptr<Buzz>, MakeBuzz, (StringPiece text), (override));
-  MOCK_METHOD(bool, ShareBuzz, (std::unique_ptr<Buzz> buzz, int64_t timestamp), (override));
-};
-```
+- **Minimum C++ Standard Requirement Increased:** The 1.17.x branch now requires at least C++17 support, enabling modern language features and improved compiler optimizations.
+- **Documentation Published on GitHub Pages:** Users are encouraged to browse the detailed and updated documentation on https://google.github.io/googletest/ for easier navigation and updated content.
+- **Dependency Update Planned:** Future releases will introduce a dependency on the [Abseil](https://github.com/abseil/abseil-cpp) common libraries to streamline internal code reuse.
 
-This makes tests for asynchronous or resource-managing APIs much more natural and clear.
-
-### Enhanced Mock Strictness Control
-The introduction of the `NiceMock`, `NaggyMock`, and `StrictMock` templates allows fine-grained control over the treatment of uninteresting calls on mocks:
-
-- `NiceMock<T>` suppresses warnings about uninteresting calls.
-- `NaggyMock<T>` (the current default) prints warnings.
-- `StrictMock<T>` treats uninteresting calls as errors, helping users catch unexpected interactions.
-
-```cpp
-using ::testing::NiceMock;
-NiceMock<MockFoo> nice_foo;
-```
-
-With these wrappers, you gain the power to make your tests more resilient or more strict based on the testing phase or purpose.
-
-### Fluent Expectation and Action Specification
-GoogleMock’s `EXPECT_CALL` macros continue to evolve, enabling:
-
-- Clear specification of call counts via cardinalities like `Times()`, including fuzzy ranges such as `AtLeast(n)` and `Between(m, n)`.
-- Ordering expectations using `InSequence` or `After`, to assert precise call order when needed.
-- Composition of multiple actions with `WillOnce` and `WillRepeatedly` clauses, allowing nuanced control over mock method return values and side effects.
-
-For example:
-
-```cpp
-EXPECT_CALL(mock_object, Method(_))
-    .Times(3)
-    .WillOnce(Return(1))
-    .WillOnce(Return(2))
-    .WillRepeatedly(Return(3));
-```
-
-This syntax makes tests more expressive and maintainable.
-
-### Support for Partial and Delegating Mocks
-GoogleMock allows delegation of mock behavior to:
-
-- **Fake implementations**, enabling code reuse when a complex fake exists and full mocking isn’t practical.
-- **Real objects**, preserving original behavior while monitoring calls.
-- **Parent class methods**, supporting legacy or hybrid classes where only a subset of methods are overridden.
-
-Example delegation to a fake:
-
-```cpp
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD(char, DoThis, (int n), (override));
-
-  void DelegateToFake() {
-    ON_CALL(*this, DoThis).WillByDefault([this](int n) {
-      return fake_.DoThis(n);
-    });
-  }
-
- private:
-  FakeFoo fake_;
-};
-```
-
-This flexibility reduces duplication and eases incremental adoption.
-
-### Improved Support for Matchers and Argument Validation
-Matchers in GoogleMock provide powerful predicate-like facilities that help verify function arguments with precision:
-
-- Extensive built-in matchers for numeric, string, container, pointer, and composite types.
-- Facilities to compose matchers (`AllOf`, `AnyOf`, `Not`).
-- Ability to validate multiple arguments together using `.With()` clause.
-- Support for custom matchers using the `MATCHER` family of macros and matcher classes.
-
-```cpp
-EXPECT_CALL(mock_object, Process(_))
-    .With(AllOf(Args<0,1>(Gt()), Args<1,2>(Le())));
-```
-
-Providing fine-grained control and meaningful failure messages empowers users to write robust, understandable tests.
-
-### New User Experience Enhancements
-- Extended diagnostics, including detailed failure messages with argument values and call stacks when using `--gmock_verbose=info` to troubleshoot expectation mismatches.
-- Support for convenient integration in editors like Emacs, enabling jump-to-error workflows to speed debugging.
-- Ability to verify and clear mock expectations before destruction for complex ownership patterns.
-
-### Thread Safety and Synchronization
-GoogleMock internally handles synchronization enabling:
-
-- Safe use of mocks in multi-threaded tests.
-- Guarantee that actions execute in the thread that invoked the mock.
-
-Users must still follow best practices by modifying mocks from a single thread during expectation setup and teardown.
-
-### Simplified Mock Class Compilation
-Separating mock class constructor and destructor definitions into source files reduces compilation times, addressing a common pain point in large codebases.
+### Version 1.16.x and Earlier
+- Continued refinements of core GoogleTest functionality including better support for death tests, parameterized tests, and typed tests.
+- Expansions of GoogleMock capabilities to cover more mocking scenarios, including improved handling of move-only types and richer matchers and actions.
+- Enhanced platform and compiler support, ensuring compatibility with a wide variety of environments.
 
 ---
 
-## Best Practices Illustrated
+## Key Feature Highlights by Release
 
-GoogleMock encourages patterns that improve test maintainability:
+### Mocking Enhancements
 
-- Use `ON_CALL` for setting default behaviors common to many tests, avoiding over-specification.
-- Use `EXPECT_CALL` sparingly, focusing on actual call verification.
-- Use sequences (`InSequence`) to enforce call order only when necessary.
-- Delegate calls to fakes or real objects to avoid redundant implementations.
+- Introduction of the unified `MOCK_METHOD` macro replacing the older family of `MOCK_METHODn` macros, simplifying mock method declarations.
+- Support for mocking template classes and overloaded methods with clear syntax.
+- Ability to specify method qualifiers like `const`, `override`, `noexcept`, and calling conventions such as `Calltype(STDMETHODCALLTYPE)`.
+- New wrappers like `NiceMock`, `NaggyMock`, and `StrictMock` allow control over warnings and error reporting on uninteresting calls, improving test flexibility and robustness.
 
-This page helps users stay informed and plan upgrades that make tests more reliable and concise.
+### Expectation and Action Control
 
----
+- Flexible options for setting expectations and call cardinalities with `EXPECT_CALL` including `.Times()`, `.WillOnce()`, `.WillRepeatedly()`, `.InSequence()`, and `.After()` clauses.
+- `ON_CALL` provides a mechanism to specify default actions without setting expectations, ideal for less strict test setups.
+- The introduction of multi-argument `.With()` clause to enforce constraints across all arguments as one tuple.
+- Support for delegating calls to fakes or real implementations from within mocks, enabling hybrid test behaviors.
 
-## Troubleshooting Tips
+### Matchers and Customization
 
-- If you encounter warnings like "Uninteresting mock function call", consider switching to `NiceMock` or explicitly allowing unexpected calls with `.Times(AnyNumber())`.
-- Use the `--gmock_verbose` flag to adjust logging verbosity for easier diagnostics.
-- If your test fails due to unexpected calls, review your `EXPECT_CALL` ordering and argument matchers; newer expectations override older ones.
-- When mocking move-only types, use lambda actions or carefully manage move semantics to avoid runtime errors.
+- Extended matcher framework supporting composite matchers, polymorphic matchers, and custom user-defined matchers via `MATCHER` macros and classes.
+- Support for matching STL containers, validating object members (`Field`, `Property`), and pointers (`Pointee`, `NotNull`).
+- Actions allowing complex side effects, chaining (`DoAll`), argument saving (`SaveArg`), and invoking callable parameters.
 
----
+### Test Execution and Reporting
 
-## Related Documentation
+- Improved command-line flags to control verbosity of mock diagnostics (`--gmock_verbose`) and catch leaked mocks.
+- Optimizations in test fixture setup and teardown cycles, improving test isolation and speed.
+- Enhanced test discovery and registration mechanism supporting type-parameterized and value-parameterized tests for maximum reuse.
 
-- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) — Beginner-friendly introduction to mocking concepts.
-- [Mocking Reference](../api-reference/core-apis/gmock-mocking-api) — Comprehensive details on mocking API.
-- [Matchers Reference](../api-reference/matchers-and-assertions/gmock-matchers) — Full list and guidance on matchers.
-- [Actions API](../api-reference/mock-actions-cardinalities/gmock-actions) — Detailed information about mock method actions.
-- [Mock Strictness Control](../api-reference/core-apis/gmock-nice-strict-api) — How to manage mock call strictness.
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) — Recipes for practical mocking scenarios.
-- [Writing and Running Your First Test](../guides/getting-started/writing-your-first-test) — Getting started guide.
+### Performance and Scalability
 
-For integration and troubleshooting, consult:
-
-- [System Requirements & Supported Platforms](../getting-started/prerequisites-installation-setup/system-requirements-supported-platforms)
-- [Installation with CMake and Bazel](../getting-started/prerequisites-installation-setup/installation-cmake-bazel)
-- [Troubleshooting Common Build Issues](../getting-started/first-test-debugging/troubleshooting-common-issues)
+- Guidance on compiling mocks efficiently by moving constructor and destructor definitions out of headers.
+- Support for parallel test execution and sharding for large test suites, improving continuous integration throughput.
 
 ---
 
-Explore the **Release History & Highlights** page for a complete timeline of release notes and changelogs.
+## Best Practices and Recommendations
 
+- Use `ON_CALL` by default to set default behaviors without expecting calls, while reserving `EXPECT_CALL` for strict verifications.
+- Define mocks in places owned by the interface maintainers to reduce maintenance burden.
+- Prefer `NiceMock` for less noisy testing, `StrictMock` only when test brittleness is acceptable to enforce strict contract adherence.
+- Always set expectations before exercising mocks to avoid undefined behavior.
+- Use sequences and partial ordering (`InSequence`, `.After()`) to validate call order precisely when needed.
 
 ---
+
+## Troubleshooting and Migration
+
+- When migrating from older `MOCK_METHODn` macros, switch to the unified `MOCK_METHOD` syntax.
+- Adjust tests to account for the new minimum C++17 requirement.
+- Review usages of uninteresting calls and apply `NiceMock` or `EXPECT_CALL(...).Times(AnyNumber())` to suppress unwanted warnings.
+- Leverage new release documentation and migration notes available on the official [GoogleTest documentation site](https://google.github.io/googletest/).
+
+---
+
+## Additional Resources
+
+- [GoogleTest Primer](https://google.github.io/googletest/primer.html): The essential starting point for writing tests.
+- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html): Beginner-friendly guide on mocking.
+- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html): Detailed API surface for mocks.
+- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html): Recipes for advanced mocking patterns.
+- [Matchers Reference](https://google.github.io/googletest/reference/matchers.html): Comprehensive guide on matchers.
+- [Changelog - Version Overview & Timeline](version-overview.md): For a full timeline of releases and changes.
+
+---
+
+For up-to-date material and examples, always refer to the official documentation hosted on GitHub Pages.
+
+---
+
+### Related Documentation
+
+- **Mocking Framework**: Learn more about defining mock objects and expectations in [Defining Mock Objects](../api-reference/mocking/mock-objects.md) and [Mock Expectations and Actions](../api-reference/mocking/mock-expectations-actions.md).
+- **Core GoogleTest Guides**: Explore writing tests, assertions, and test fixtures in [GoogleTest Primer](../primer.md) and [Basic Concepts](../overview/foundations-and-architecture/core-concepts-and-terminology.md).
+- **Best Practices**: Consult [gMock Cookbook](../guides/core-scenarios/working-with-mocks.md) for real-world usage scenarios and advice.
+
+---
+
+By following the feature improvements and best practices presented here, you can ensure your testing harness stays modern, efficient, and maintainable while harnessing the full power of GoogleTest and GoogleMock.
