--- a/changelog/migrations-upgrades/breaking-changes.mdx
+++ b/changelog/migrations-upgrades/breaking-changes.mdx
@@ -1,110 +1,233 @@
 ---
-title: "Breaking Changes Overview"
-description: "Catalogues all changes that may impact backward compatibility, including API modifications, platform requirements, and behavioral differences. For each breaking change, clear guidance is provided to help teams adapt."
+title: "Breaking Changes & Migration Notes"
+description: "Details any changes in each release that could break backward compatibility, including required code updates and removal of deprecated APIs. Provides concrete migration strategies and references to updated APIs."
 ---
 
-# Breaking Changes Overview
+# Breaking Changes & Migration Notes
 
-The **Breaking Changes Overview** page catalogues all changes in GoogleTest that may impact backward compatibility. This resource is essential for teams anticipating an upgrade, as it highlights API modifications, platform requirements, and behavior differences that could affect existing test suites. For each breaking change, actionable guidance is provided to help you smoothly adapt and maintain continuity in your testing workflows.
-
----
-
-## Understanding Breaking Changes
-
-Upgrading to a newer GoogleTest version can bring performance, reliability, and security improvements. However, any breaking changes—alterations that may cause existing tests or integrations to fail—require careful attention. This page serves as your centralized catalog to identify such changes, understand their impact, and navigate migration steps.
-
-### What Constitutes a Breaking Change?
-
-- **API Modifications:** Changes to function signatures, method availability, or default behaviors in GoogleTest or GoogleMock APIs.
-- **Platform and Language Requirements:** Minimum supported C++ standards or platform drops that might necessitate recompilation or environment updates.
-- **Behavioral Differences:** Changes in assertion handling, test discovery, mocking semantics, or execution flows.
-
-Recognizing and addressing these prevents test regressions and integration errors.
-
-<Check>
-Always review the breaking changes documented here before upgrading to a new GoogleTest version to avoid unexpected test failures.
-</Check>
-
-## Overview of Notable Breaking Changes
-
-We organize breaking changes into targeted categories for clear understanding:
-
-### 1. API Signature and Behavior Updates
-
-- Changes to macros like `MOCK_METHOD`, `EXPECT_CALL`, and `ON_CALL` requiring updated syntax or qualifiers.
-- Updates in matchers or actions that affect how expectations and behaviors are specified.
-- Adjustments in handling overloaded or templated mock methods.
-
-### 2. Platform and Compiler Requirements
-
-- Introduction of mandatory **C++17** language standard support starting with version 1.17.x.
-- Deprecation of support for older MSVC versions or non-modern compilers.
-
-### 3. Framework Initialization and Execution
-
-- Modifications in initialization functions such as `InitGoogleTest` and `InitGoogleMock`.
-- Changes in test discovery mechanisms affecting how tests are registered and run.
-
-### 4. Mocking Behavior Changes
-
-- Default strictness transitions in mocks (e.g., default to NaggyMock behavior).
-- Changes in handling uninteresting and unexpected calls, including warnings vs failures.
-- Alterations in usage patterns for `NiceMock`, `StrictMock`, and `NaggyMock`.
-
-## How to Adapt: Practical Guidance
-
-For each breaking change, you will find clear migration advice focused on user outcomes:
-
-- **Code-Level Updates:** Step-by-step instructions to alter mock classes, test cases, or configurations.
-- **Build and Environment:** Guidance to update compilers, build systems (e.g., CMake), and platform targets.
-- **Behavioral Adjustments:** Recommendations to revise test expectations, mocking strictness, or assertion styles.
-
-This progressive approach supports a gradual migration without disrupting your testing pipelines.
-
-## Best Practices When Facing Breaking Changes
-
-- **Incremental Upgrades:** Upgrade one major version at a time and validate test stability.
-- **Use `NiceMock` or `StrictMock` Explicitly:** Control mock strictness to reduce unexpected warnings or failures.
-- **Review `EXPECT_CALL` Usages:** Ensure expectations match updated API and semantic rules.
-- **Leverage Verbosity Flags:** Use `--gmock_verbose` to diagnose test failures during adaptation.
-
-## Common Pitfalls and Troubleshooting
-
-- Ignoring mandatory C++17 support may lead to compilation failures.
-- Retaining deprecated mocking macros or signatures causes build and run-time errors.
-- Over-specifying expectations can cause brittle tests; prefer `ON_CALL` for default behavior where verification isn't needed.
-
-Refer to troubleshooting sections in [Mocking API Reference](https://google.github.io/googletest/reference/mocking.md) and [Diagnosing Test Failures](https://google.github.io/googletest/faq/advanced-troubleshooting/test-failures-diagnostics.html) for help.
+This page details any changes in each release of GoogleTest and GoogleMock that could break backward compatibility. It provides concrete migration strategies, outlines required code updates, and points to relevant updated APIs for a smooth transition.
 
 ---
 
-## Illustrative User Flow: Navigating a Breaking Change
+## What Are Breaking Changes?
 
-1. **Identify** the breaking change affecting your tests (e.g., `MOCK_METHOD` macro updated to require explicit qualifiers).
-2. **Locate** all mock classes using the affected pattern.
-3. **Apply** updated syntax, ensuring parentheses around complex types and appropriate use of `(override)`.
-4. **Verify** compilation passes and tests execute with expected outcomes.
-5. **Adjust** mocking strictness using `NiceMock` or `StrictMock` to manage warnings.
-6. **Consult** related migration guides and API references for complex cases.
+Breaking changes are modifications to the API or behavior of GoogleTest and GoogleMock that could cause existing tests or test setups to stop compiling or functioning correctly without modifications. These are typically introduced during major or sometimes minor version releases and require user action to adapt.
+
+### Why Pay Attention to Breaking Changes?
+
+When you upgrade to a newer version of GoogleTest, ignoring breaking changes may lead to:
+
+- Test failures due to API incompatibility.
+- Compilation errors arising from removed or altered interfaces.
+- Unexpected test behavior due to changes in default mock object strictness or assertion semantics.
+
+Being aware of these changes ensures your test suite remains reliable and maintainable.
+
+## Identifying Breaking Changes in Releases
+
+Each release announcement highlights any breaking changes along with the recommended path to migrate your code.
+
+### Typical Breaking Change Categories
+
+- **API Removals or Renames**: Deprecated functions, macros, or classes removed or renamed.
+- **Behavioral Changes**: Modification of default behaviors that might affect tests.
+- **Build System Updates**: Changes to build requirements or supported C++ standards.
+- **Mocking API Changes**: Alterations in MOCK_METHOD macro usage or mock strictness.
+
+## Migration Strategies
+
+To ease migration, use the following approaches:
+
+### 1. Review Release Notes Diligently
+
+Before upgrading, thoroughly read the release notes for the new GoogleTest version, focusing on Breaking Changes sections. These usually include:
+
+- Description of the change
+- Impact analysis
+- Migration steps and code examples
+
+### 2. Update Deprecated API Usages
+
+Where APIs are removed or renamed, update your code accordingly. For instance:
+
+- Replace deprecated assertions with their recommended alternatives.
+- Adjust mock class definitions if the `MOCK_METHOD` macro signature changes.
+
+### 3. Adapt to New Language Requirements
+
+Since the GoogleTest 1.17.x branch requires at least C++17, ensure your project is configured accordingly. Some examples:
+
+- Update your compiler flags to enable C++17.
+- Remove usages incompatible with C++17 or adapt them.
+
+### 4. Manage Mock Strictness Changes
+
+If the default behavior of mock objects changes (e.g., from NaggyMock to NiceMock or StrictMock), explicitly specify mock strictness in your mocks:
+
+```cpp
+using ::testing::NiceMock;
+using ::testing::StrictMock;
+
+NiceMock<MyMock> mock;  // Suppresses uninteresting call warnings
+StrictMock<MyMock> mock; // Treats uninteresting calls as failures
+```
+
+### 5. Verify Test Behavior Post-Migration
+
+Run your entire suite after migration. Pay close attention to:
+
+- Compile errors or warnings
+- New test failures
+- Changes in test output formatting or reporting
+
+Use verbose modes and debug assertions to assist.
+
+### 6. Utilize migration examples and tools
+
+Some breaking changes have automated migration scripts or code samples available in the community or official repositories. Incorporate those where possible.
+
+## Common Breaking Changes and their Migration
+
+### Major Version: 1.17.0 (and related branches)
+
+- **C++17 Minimum Required**: The compiler must fully support C++17.
+    - _Migration_: Configure your build system accordingly.
+
+- **Unified Mock Macro Signature**: `MOCK_METHOD` replaces older macro forms.
+    - _Migration_: Refactor mock classes to use `MOCK_METHOD(ReturnType, MethodName, (Args...), (Qualifiers))`.
+
+- **Explicit Test Suite Naming for Death Tests**
+    - _Migration_: Rename death test suites to follow the `*DeathTest` suffix convention.
+
+- **Underscore Restriction in `TEST` Names**
+    - _Migration_: Avoid underscores in test suite and test names to prevent name clashes.
+
+## Deprecated APIs and Features
+
+### Deprecated Assertions
+
+Check release notes and remove deprecated assertions, substituting with new alternatives such as `EXPECT_THAT` with matchers instead of custom `EXPECT_PRED*` where applicable.
+
+### Mocking API Deprecations
+
+- Avoid old-style `MOCK_METHODn` macros in favor of `MOCK_METHOD` for better maintainability.
+
+### Flag and Environment Variable Updates
+
+Flags like `--gtest_death_test_style` may have evolved in supported values and defaults. Verify your test runners and build configurations.
+
+## Troubleshooting Post-Migration
+
+- **Unexpected test failures**: Use verbose mode (`--gtest_verbose=info`) for detailed logs.
+- **Compilation failures**: Review API changes and build settings, especially C++ standard flags.
+- **Mock-related warnings or errors**: Check mock strictness and expectation configurations.
+
+## Practical Migration Examples
+
+Consider the following example where code uses old macros and deprecated naming:
+
+```cpp
+// Old style MOCK_METHOD
+class OldMock : public Foo {
+  MOCK_METHOD1(Bar, void(int x));
+};
+
+// After migration
+class NewMock : public Foo {
+  MOCK_METHOD(void, Bar, (int x), (override));
+};
+```
+
+Handling test suite naming for death tests:
+
+```cpp
+// Legacy death test naming
+TEST_F(FooTest, BarDeath) { ASSERT_DEATH(...); }
+
+// Recommended
+class FooDeathTest : public FooTest {};
+TEST_F(FooDeathTest, Bar) { ASSERT_DEATH(...); }
+```
+
+## References to Updated APIs
+
+- **Assertions**: Refer to the [Assertions Reference](api-reference/core-apis/assertions.md) that includes updated macros and how to use them.
+- **Mocking**: Read the [Mocking Reference](api-reference/mocking/mock-objects.md) for the latest on mock class declarations and expectations.
+- **Matchers**: The [Matchers Reference](api-reference/advanced-testing/matchers.md) provides improved flexible assertions.
+
+## Additional Resources
+
+- [GoogleTest Primer](docs/advanced.md#primer) for foundational concepts.
+- [Migration Guide and Release Notes](https://github.com/google/googletest/releases) for version-specific changes.
 
 ---
-
-## Additional Resources and References
-
-- [GoogleTest API Reference - Mocking](https://google.github.io/googletest/reference/mocking.md)
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) for advanced mocking techniques and migration tips.
-- [Release Notes and Upgrade Guides](https://github.com/google/googletest/releases) provide version-specific breaking changes and remediation.
-- [Core Testing API - Test Fixtures & Test Case Management](https://google.github.io/googletest/api-reference/core-testing-api/test-fixtures-test-case-management.html) to adapt test structures.
-- [Platform Support and Build Integration](https://google.github.io/googletest/overview/architecture-integration/platform-and-tool-integration.html) for environment updates.
-
----
-
-For a detailed, version-specific list of breaking changes, visit the related [Upgrade & Migration Guides](../changelog/migrations-upgrades/upgrade-migration-guides).
 
 <Tip>
-Before upgrading GoogleTest in your CI/CD pipeline, run your full test suite locally with the new version to detect any breaking changes early.
+Always maintain a backup branch before performing upgrades and test runs. Automate your tests in CI systems to catch regression early.
 </Tip>
+
+<Tip>
+Use the `SCOPED_TRACE` macro to aid debugging when migrating complex tests with nested subroutines.
+</Tip>
+
+# Frequently Asked Questions
+
+### Can I skip migration steps?
+No, breaking changes require attention to prevent test failures.
+
+### How do I handle deprecated EXPECT_PRED* usage?
+Transition to using `EXPECT_THAT` with matchers or write predicate-format assertions.
+
+### What if my death tests fail after upgrade?
+Ensure your death tests use the current death test style and suite naming conventions.
+
+### Who to contact for help?
+Reach out to the [GoogleTest community](https://groups.google.com/g/googletestframework).
 
 ---
 
-*This overview is intended to empower GoogleTest users with foresight and clarity, enabling a confident transition to newer versions without disruption.*
+## Sample Migration Workflow
+
+<Steps>
+<Step title="Backup Your Current Codebase">
+Make sure you have a version-controlled snapshot of your current tests.
+</Step>
+<Step title="Review Release Notes">
+Read the release notes for the target GoogleTest version, focusing on breaking changes.
+</Step>
+<Step title="Upgrade Build Configurations">
+Set your compiler to support C++17 or later.
+</Step>
+<Step title="Refactor Mock Classes">
+Replace deprecated `MOCK_METHODn` macros with `MOCK_METHOD`.
+</Step>
+<Step title="Rename Death Test Suites">
+Apply `*DeathTest` suffix to test fixture classes containing death tests.
+</Step>
+<Step title="Test All Code">
+Run your test suite, analyze failures, and fix issues iteratively.
+</Step>
+</Steps>
+
+---
+
+## Conclusion
+
+Upgrading GoogleTest requires attention to breaking changes especially related to mocking API, test naming conventions, and build configurations. This guide equips you with knowledge and actionable steps to upgrade smoothly while ensuring your tests remain robust and maintainable.
+
+---
+
+## See Also
+
+- [GoogleTest Release History & Highlights](/changelog/release-history/feature-highlights)
+- [GoogleTest Installation and Environment Setup](/guides/getting-started/setup-installation)
+- [Assertions Reference](/api-reference/core-apis/assertions)
+- [Mocking Reference](/api-reference/mocking/mock-objects)
+- [Matchers Reference](/api-reference/advanced-testing/matchers)
+- [GoogleTest FAQ](/faq/getting-started-faq/installation-integration-faq)
+
+---
+
+<Info>
+For version-specific migration instructions, consult the GitHub releases page and consider subscribing to community discussions.
+</Info>
